Changed auth by email
